k8s/01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: bookinfo-service
spec:
  containers:
  - name: busybox
    image: busybox
    command:
    - sleep
    - "3600"
