k8s/02-apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: bookinfo-service
  labels:
    app: apache
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - image: httpd:2.4.46-alpine
        name: apache
