k8s/02-apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache
  namespace: bookinfo-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: apache
