k8s/ratings-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-dev-ratings
  namespace: bookinfo-service 
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: bookinfo-dev-ratings
