k8s/ratings-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: bookinfo-dev-ratings
  namespace: bookinfo-service 
spec:
  rules:
  - host: polawich.opsta.in.th
    http:
      paths:
      - backend:
          serviceName: bookinfo-dev-ratings
          servicePort: 8080
        path: /ratings(/|$)(.*)
